# owl-guard

./: README.md  install.sh  owl-guard.service  pyproject.toml  requirements.txt
src/: .env.example  async_notification_util.py  cli.py  dbus_core.py  login_monitor.py  main.py  notification_service.py  schemas.py  utils.py
src/config/: constants.py  logging.yaml
src/core/: dbus.py
src/models/: schemas.py
src/services/: cache_session_service.py  env_service.py  login_monitor.py  notification_service.py
src/utils/: cli.py  cli_validator.py  notification_util.py  notification_utils.py
src/utils/logger/: constants.py  json_formatter.py  log_manager.py  web_handler.py
ssh_owl/: async_notification_util.py  dbus_core.py  main.py  notification_util.py  pyproject.toml  sessions_looker.py
tests/: test_noteification_util.py  test_notification_util.py
